<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.phasetwo</groupId>
  <artifactId>phasetwo-admin-portal</artifactId>
  <packaging>jar</packaging>
  <version>0.34-SNAPSHOT</version>

  <parent>
    <groupId>com.github.xgp</groupId>
    <artifactId>oss-parent</artifactId>
    <version>0.7</version>
  </parent>

  <developers>
    <developer>
      <name>Phase Two, Inc.</name>
      <url>https://github.com/p2-inc</url>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Elastic License v2</name>
      <url>https://raw.githubusercontent.com/elastic/elasticsearch/main/licenses/ELASTIC-LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <main.java.package>io.phasetwo.portal</main.java.package>
    <keycloak.version>26.0.2</keycloak.version>
    <guava.version>33.0.0-jre</guava.version>
    <commons-lang3.version>3.11</commons-lang3.version>
    <lombok.version>1.18.34</lombok.version>
    <auto-service.version>1.1.1</auto-service.version>
    <ossrh.url>https://s01.oss.sonatype.org</ossrh.url>
  </properties>

  <scm>
    <url>https://github.com/p2-inc/admin-portal</url>
    <connection>scm:git:git@github.com:p2-inc/admin-portal.git</connection>
    <tag>HEAD</tag>
  </scm>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
	  <compilerArgument>-Xlint:unchecked</compilerArgument>
	  <compilerArgument>-Xlint:deprecation</compilerArgument>
          <useIncrementalCompilation>false</useIncrementalCompilation>
	  <annotationProcessorPaths>
            <path>
	      <groupId>com.google.auto.service</groupId>
	      <artifactId>auto-service</artifactId>
	      <version>${auto-service.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
	<version>3.3.0</version>
      </plugin>
      <plugin>
        <groupId>com.github.eirslett</groupId>
        <artifactId>frontend-maven-plugin</artifactId>
	<version>1.15.0</version>
        <executions>
          <execution>
	    <id>setup-node-and-yarn</id>
	    <goals>
	      <goal>install-node-and-yarn</goal>
	    </goals>
	    <phase>initialize</phase>
          </execution>
	  <execution>
	    <id>yarn-install</id>
	    <goals>
	      <goal>yarn</goal>
	    </goals>
	    <phase>initialize</phase>
          </execution>
          <execution>
	    <id>yarn-build</id>
	    <goals>
	      <goal>yarn</goal>
	    </goals>
	    <configuration>
	      <arguments>build-mvn</arguments>
	    </configuration>
	    <phase>generate-resources</phase>
          </execution>
	</executions>
        <configuration>
          <nodeVersion>v19.1.0</nodeVersion>
          <yarnVersion>v1.22.19</yarnVersion>
	  <workingDirectory>.</workingDirectory>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>copy-resources-index</id>
            <phase>process-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/classes/theme/portal/login/</outputDirectory>
              <resources>          
                <resource>
                  <directory>build</directory>
                  <filtering>false</filtering>
		  <includes>
		    <include>index.html</include>
		  </includes>
                </resource>
              </resources>              
            </configuration>            
          </execution>
          <execution>
            <id>copy-resources</id>
            <phase>process-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/classes/theme/portal/login/resources</outputDirectory>
              <resources>          
                <resource>
                  <directory>build</directory>
                  <filtering>false</filtering>
                </resource>
              </resources>              
            </configuration>            
          </execution>
        </executions>
      </plugin>
      <plugin>
	<groupId>com.coderplus.maven.plugins</groupId>
	<artifactId>copy-rename-maven-plugin</artifactId>
	<version>1.0.1</version>
	<executions>
	  <execution>
	    <id>copy-and-rename-file</id>
	    <phase>process-resources</phase>
	    <goals>
	      <goal>rename</goal>
	    </goals>
	    <configuration>
	      <sourceFile>${project.build.directory}/classes/theme/portal/login/index.html</sourceFile>
	      <destinationFile>${project.build.directory}/classes/theme/portal/login/portal.ftl</destinationFile>
	    </configuration>
	  </execution>
	</executions>
      </plugin>
      <plugin> <!-- pretty up the code using google java standards `mvn fmt:format` -->
        <groupId>com.spotify.fmt</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.23</version>
      </plugin>
    </plugins>
    <sourceDirectory>ext/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>ext/main/resources</directory>
      </resource>
    </resources>
  </build>
  
  <dependencies>
    <!-- annotation processing helpers for logging and services -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.auto.service</groupId>
      <artifactId>auto-service</artifactId>
      <version>${auto-service.version}</version>
      <scope>provided</scope>
    </dependency>
    
    <!-- keycloak deps -->
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-server-spi</artifactId>
      <version>${keycloak.version}</version>      
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-server-spi-private</artifactId>
      <version>${keycloak.version}</version>      
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-services</artifactId>
      <version>${keycloak.version}</version>      
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

</project>
